--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
@@ -1,7 +1,8 @@
 ﻿@page "/SetItem"
+@using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
-
+@using Blazorise.Components;
 @inject IStringLocalizer<PikachuResource> L;
 @inject NavigationManager _navigationManger;
 
@@ -16,6 +17,65 @@
         </button>
     </div>
 </div>
+
+<Card Class="mt-2">
+    <CardBody>
+        <DataGrid TItem="SetItemDto"
+                  Data="SetItemList"
+                  ReadData="OnDataGridReadAsync"
+                  TotalItems="Total"
+                  ShowPager="true"
+                  PageSize="PageSize"
+                  RowClicked="OnEditItem">
+            <DataGridColumns>
+                <DataGridColumn TItem="SetItemDto" Caption="@L["Select"]">
+                    <DisplayTemplate>
+                        <InputCheckbox class="form-check-input" @bind-Value="@context.IsSelected"></InputCheckbox>
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn TItem="SetItemDto"
+                                Field="@nameof(SetItemDto.SetItemName)"
+                                Caption="@L["ItemName"]">
+                </DataGridColumn>
+                <DataGridColumn TItem="SetItemDto"
+                                Field="@nameof(SetItemDto.SetItemDescriptionTitle)"
+                                Caption="@L["ItemDescription"]">
+                </DataGridColumn>
+                <DataGridColumn TItem="SetItemDto"
+                                Caption="@L["TimeLimitPeriod"]">
+                    <DisplayTemplate>
+                        @context.LimitAvaliableTimeStart.ToShortDateString() - @context.LimitAvaliableTimeEnd.ToShortDateString()
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn TItem="SetItemDto"
+                                Field="@nameof(SetItemDto.CreationTime)"
+                                Caption="@L["CreatedTime"]">
+                    <DisplayTemplate>
+                        @context.CreationTime.ToShortDateString()
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn TItem="SetItemDto"
+                                Field="@nameof(SetItemDto.IsFreeShipping)"
+                                Caption="@L["FreeShipping"]">
+                    <DisplayTemplate>
+                        @if (context.IsFreeShipping)
+                        {
+                            <i class="fa fa-check bg-success text-light p-1"></i>
+                        }
+                        else
+                        {
+                            <i class="fa fa-times bg-danger text-light p-1"></i>
+                        }
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn TItem="ItemDto"
+                                Field="@nameof(ItemDto.ShareProfit)"
+                                Caption="@L["ShareProfit"]">
+                </DataGridColumn>
+            </DataGridColumns>
+        </DataGrid>
+    </CardBody>
+</Card>
 
 @code {
     private void NavigateToCreateSetItem()
