--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -7,6 +7,7 @@
 @using Blazorise.Components;
 
 @inject IStringLocalizer<PikachuResource> L;
+@inject NavigationManager NavigationManager;
 
 <h3>@L["SetItem"]</h3>
 
@@ -157,7 +158,7 @@
                 <div class="col-2">
                     @L["AddItem"]
                 </div>
-                <div class="col-10">
+                <div class="col-9">
                     <Autocomplete TItem="KeyValueDto"
                                   TValue="Guid?"
                                   Data="@ItemsList"
@@ -173,6 +174,11 @@
                                   @ref="AutocompleteField">
                         <NotFoundContent> @L["NotFound"] </NotFoundContent>
                     </Autocomplete>
+                </div>
+                <div class="col-1">
+                    <Button Color="Color.Danger">
+                        <i class="fa fa-trash"></i>
+                    </Button>
                 </div>
         </div>
 
@@ -199,7 +205,7 @@
                             {
                                 <TableRow Class="text-center align-items-center">
                                     <TableRowCell>
-                                        <input type="checkbox" class="form-check-input" checked="@item.IsSelected" />
+                                        <InputCheckbox class="form-check-input" @bind-Value="@item.IsSelected"></InputCheckbox>
                                     </TableRowCell>
                                     <TableRowCell Class="text-start">
                                     <Div Class="d-flex flex-row">
