create set item changes

--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -176,7 +176,7 @@
                     </Autocomplete>
                 </div>
                 <div class="col-1">
-                    <Button Color="Color.Danger">
+                    <Button Color="Color.Danger" Clicked="RemoveSelectedItems">
                         <i class="fa fa-trash"></i>
                     </Button>
                 </div>
