--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
@@ -11,10 +11,20 @@
         <h3>@L["SetItem"]</h3>
     </div>
     <div Class="col-6 d-flex flex-row-reverse">
+        
+        <button class="btn btn-sm btn-danger me-2" @onclick="DeleteSelectedAsync">
+            @L["DeleteSelected"]
+        </button>
+
         <button class="btn btn-sm btn-primary" @onclick="NavigateToCreateSetItem">
             <i class="fa fa-plus"></i>
-            @L["AddNew"]
+            @L["NewSetItem"]
         </button>
+
+        <div class="me-2 p-2">
+            <input type="checkbox" class="me-1" style="height: 15px; width: 15px;" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
+            <Label Class="form-label">@L["SelectAll"]</Label>
+        </div>
     </div>
 </div>
 
@@ -26,7 +36,7 @@
                   TotalItems="Total"
                   ShowPager="true"
                   PageSize="PageSize"
-                  RowClicked="OnEditItem">
+                  RowDoubleClicked="OnEditItem">
             <DataGridColumns>
                 <DataGridColumn TItem="SetItemDto" Caption="@L["Select"]">
                     <DisplayTemplate>
