added group buy item group in create

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -123,7 +123,7 @@
                                        
                                         Changed="OnLogoUploadAsync"
                                         ShowMode="FilePickerShowMode.List"
-                                        Accept=".jpg, .png, .svg">
+                                        Accept=".jpg, .png, .svg,.jpeg,.webp">
                                 <FileTemplate>
                                     <Div Flex="Flex.JustifyContent.Between">
                                         <Div>
@@ -195,7 +195,7 @@
                                        
                                         Changed="OnBannerUploadAsync"
                                         ShowMode="FilePickerShowMode.List"
-                                        Accept=".jpg, .png, .svg">
+                                        Accept=".jpg, .png, .svg ,.jpeg,.webp">
                                 <FileTemplate>
                                     <Div Flex="Flex.JustifyContent.Between">
                                         <Div>
@@ -271,7 +271,7 @@
                                         Multiple
                                         Changed="OnCarouselUploadAsync"
                                         ShowMode="FilePickerShowMode.List"
-                                        Accept=".jpg, .png, .svg">
+                                        Accept=".jpg, .png, .svg ,.jpeg,.webp">
                                 <FileTemplate>
                                     <Div Flex="Flex.JustifyContent.Between">
                                         <Div>
