--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -39,7 +39,7 @@
                                         Multiple
                                  Changed="OnFileUploadAsync"
                                  ShowMode="FilePickerShowMode.List"
-                                 Accept=".jpg, .png, .svg">
+                                 Accept=".jpg, .png, .svg, ,.jpeg,.webp">
                          <FileTemplate>
                              <Div Flex="Flex.JustifyContent.Between">
                                  <Div>
